--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "index": "nodemon ./js/index.js",
     "funkcijos": "nodemon ./js/funkcijos.js",
+    "uzdavinys": "nodemon ./js/uzdavinys.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
